--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "property-graph-schema-zooming",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "run-p -l type-check:watch start:dev",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "start:dev": "parcel ./src/index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.7.3"
   },
   "dependencies": {
