--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "start:dev": "parcel ./src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "npx prettier --write src/**/*.ts"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
