--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prettier": "npx prettier --write src/**/*.ts"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/d3": "^7.4.0",
