--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "type-check:watch": "npm run type-check -- --watch",
     "start:dev": "parcel ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "npx prettier --write src/**/*.ts"
+    "prettier": "npx prettier --write src/**/*.ts",
+    "lint": "npx eslint src/**/*.ts"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
