--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "@typescript-eslint/parser": "^5.29.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.7.1"
   }
 }
