--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1"
+    "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "@types/d3": "^7.4.0",
+    "d3": "^7.6.1"
   }
 }
