--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "dependencies": {
     "@types/d3": "^7.4.0",
