--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
@@ -14,7 +14,7 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": false
+    "isolatedModules": false,
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
