--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@types/d3": "^7.4.0",
-    "d3": "^7.6.1"
+    "d3": "^7.6.1",
+    "svelte-jsoneditor": "^0.6.4",
+    "svelte-simple-modal": "^1.4.1"
   }
 }
