--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "prettier": "npx prettier --write src/**/*.ts",
+    "lint": "npx eslint src/**/*.ts"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
